Load sales from a tab separated file with basic specs

--- a/mongo_challenge/Gemfile
+++ b/mongo_challenge/Gemfile
@@ -10,10 +10,12 @@ group :assets do
 end
 
 group :test, :development do
-    gem "rspec-rails", "~> 2.0"
+  gem "rspec-rails"
+  gem 'capybara'
 end
 
 gem 'jquery-rails'
 
 gem 'mongo_mapper'
 gem 'bson_ext'
+gem 'debugger'
